buildscript {
    repositories {
        mavenCentral()
        maven { url "https://plugins.gradle.org/m2" }
        maven { url "https://repo.spring.io/release" }
        maven { url "https://repo.spring.io/snapshot" }
        maven { url "https://repo.spring.io/libs-snapshot" }
        maven { url "https://repo.spring.io/milestone" }
        maven { url "https://repo.spring.io/libs-milestone-local" }
    }

    dependencies {
        classpath 'io.spring.gradle:dependency-management-plugin:1.1.1'
        classpath 'org.springframework.boot:spring-boot-gradle-plugin:3.1.1'
    }
}

ext {
    bootProjects = subprojects.findAll { ( it.name.endsWith('-boot')) }

    slf4jVersion = "2.0.7"
    logbackVersion = "1.4.8"
    jakartaAnnotationVersion = "2.1.0"
    lang3Version = "3.12.0"
    mockitoVersion = "2.0.2-beta"
    aspectjVersion = "1.9.9.1"
    lombokVersion = "1.18.28"
    mariadbClientVersion = "3.1.4"
    dbcp2Version = "2.9.0"
    h2Version = "2.3.232"
    testcontainersVersion = "1.18.3"
}

configure(allprojects) { project ->
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'java'

    repositories {
        mavenCentral()
        maven { url "https://plugins.gradle.org/m2" }
        maven { url "https://repo.spring.io/release" }
        maven { url "https://repo.spring.io/snapshot" }
        maven { url "https://repo.spring.io/libs-snapshot" }
        maven { url "https://repo.spring.io/milestone" }
        maven { url "https://repo.spring.io/libs-milestone" }
    }

    version  '1.0-SNAPSHOT'

    compileJava {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }
    dependencies {
        implementation "org.apache.commons:commons-lang3:$lang3Version"
        implementation "org.junit.jupiter:junit-jupiter:5.9.3"
    }

    test {
        useJUnitPlatform()
        jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
    }
}

configure(bootProjects) { project ->
    apply plugin: 'org.springframework.boot'
}

tasks.withType(Wrapper).configureEach {
    gradleVersion = '8.3-20230504222113+0000' //version required
}